--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#features">Features</a></li>
                 <li><a href="#aboutMe">About Me</a></li>
+                <li><a href="#education">Education</a></li>
                 <li><a href="#expertise">Expertise</a></li>
-                <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contactMe" style="color: white;">Contact Me</a></li>
             </ul>
@@ -40,7 +40,7 @@
     <main>
 
 <!--        header section-->
-        <section>
+        <section id="home">
             <img width="1349" height="780" src="assets/Frame 2.png" alt="lakshan">
             <img width="500"  src="assets/Frame 2 (1).png" alt="lakshan">
             <mark>Hello I'm </mark>
@@ -77,7 +77,7 @@
         </section>
 
 <!--        features section-->
-        <section>
+        <section id="features">
                 <p>
 
                 <h2>Features</h2>
@@ -123,7 +123,7 @@
         </section>
 
 <!--        about me section-->
-        <section>
+        <section id="aboutMe">
             <aside></aside>
             <section>
                 <hgroup>
@@ -157,7 +157,7 @@
         </section>
 
 <!--        education section-->
-        <section>
+        <section id="education">
             <section>
                 <hgroup>
                     <img width="1341" height="1900" src="assets/Frame 45.png" alt="lakshan">
@@ -216,7 +216,7 @@
         </section>
 
 <!--        my expertise section-->
-        <section>
+        <section id="expertise">
             <hgroup>
 
                 <h1>My Expertise</h1>
@@ -314,7 +314,7 @@
         </section>
 
 <!--        project section-->
-        <section>
+        <section id="projects">
             <hgroup>
 
                 <h1>Projects and Assignments<bfn id = "Project"></bfn></h1>
@@ -354,7 +354,7 @@
         </section>
 
 <!--        contact section-->
-        <section>
+        <section id="contactMe">
             <hgroup>
                 <h1>Contact Me<bfn id = "Contact Me"></bfn></h1>
                 <p>
