--- a/index.html
+++ b/index.html
@@ -41,39 +41,48 @@
 
 <!--        header section-->
         <section id="home">
-            <img width="1349" height="780" src="assets/Frame 2.png" alt="lakshan">
-            <img width="500"  src="assets/Frame 2 (1).png" alt="lakshan">
-            <mark>Hello I'm </mark>
-            <la>Lakshan </la>
-            <laks>Rashmika</laks>
+            <div>
+                <img width="1349" height="780" src="assets/Frame 2.png" alt="lakshan">
+            </div>
 
-            <p>
+            <div>
+                <img src="assets/Frame 2 (1).png" alt="myImage">
+            </div>
 
-                I am currently studying for a software engineer<br>
-                diploma at IJSE and I am also studying other subjects.<br>
-                I am twenty one years old
+            <div>
 
-            </p>
-            <ul>
-                <button>About Me</button>
+                <mark>Hello I'm </mark>
+                <la>Lakshan </la>
+                <laks>Rashmika</laks>
 
-                <a href="https://www.linkedin.com/feed/" target="blank">
-                    <img width="32"  src="assets/FontAwesome_f0e1(1)_48.png" alt="lakshan">
-                </a>
+                <p>
 
-                <a href="https://www.linkedin.com/feed/" target="blank">
-                    <img width="32"  src="assets/Entypo_f32d(2)_48.png" alt="lakshan">
-                </a>
+                    I am currently studying for a software engineer<br>
+                    diploma at IJSE and I am also studying other subjects.<br>
+                    I am twenty one years old
 
-                <a href="https://www.facebook.com/" target="blank">
-                    <img width="32"  src="assets/themify_e741(0)_48.png" alt="lakshan">
-                </a>
+                </p>
+                <ul>
+                    <button>About Me</button>
 
-                <a href="https://www.linkedin.com/feed/" target="blank">
-                    <img width="32"  src="assets/icons8-discord-48 1.png" alt="lakshan">
-                </a>
+                    <a href="https://www.linkedin.com/feed/" target="blank">
+                        <img width="32"  src="assets/FontAwesome_f0e1(1)_48.png" alt="lakshan">
+                    </a>
 
-            </ul>
+                    <a href="https://www.linkedin.com/feed/" target="blank">
+                        <img width="32"  src="assets/Entypo_f32d(2)_48.png" alt="lakshan">
+                    </a>
+
+                    <a href="https://www.facebook.com/" target="blank">
+                        <img width="32"  src="assets/themify_e741(0)_48.png" alt="lakshan">
+                    </a>
+
+                    <a href="https://www.linkedin.com/feed/" target="blank">
+                        <img width="32"  src="assets/icons8-discord-48 1.png" alt="lakshan">
+                    </a>
+
+                </ul>
+            </div>
         </section>
 
 <!--        features section-->
