--- a/index.html
+++ b/index.html
@@ -50,20 +50,30 @@
             </div>
 
             <div>
+                <aside>
+                    <div>
+                        <p>Hello I'm</p>
+                        <h1>Lakshan Rashmika</h1>
 
-                <mark>Hello I'm </mark>
-                <la>Lakshan </la>
-                <laks>Rashmika</laks>
+                        <h4>Fullstack <span>Developer</span></h4>
 
-                <p>
+                        <p>
+                            I am currently studying for a software engineer<br>
+                            diploma at IJSE and I am also studying other subjects.<br>
+                            I am twenty one years old
+                        </p>
 
-                    I am currently studying for a software engineer<br>
-                    diploma at IJSE and I am also studying other subjects.<br>
-                    I am twenty one years old
+                    </div>
 
-                </p>
+                    <strong>good vibes only !</strong><br><br><br><br>
+
+                    <div>
+                        <a href="#aboutMe"><button>About Me</button></a><br><br>
+                    </div>
+
+                </aside>
+
                 <ul>
-                    <button>About Me</button>
 
                     <a href="https://www.linkedin.com/feed/" target="blank">
                         <img width="32"  src="assets/FontAwesome_f0e1(1)_48.png" alt="lakshan">
