--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="css/necolas.github.io_normalize.css_8.0.1_normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 
+    <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@900&display=swap" rel="stylesheet">
+
+
 
 </head>
 
@@ -53,14 +56,15 @@
                 <aside>
                     <div>
                         <p>Hello I'm</p>
-                        <h1>Lakshan Rashmika</h1>
+                        <h1>Lakshan <span>Rashmika</span></h1>
 
-                        <h4>Fullstack <span>Developer</span></h4>
+                        <div data-aos="zoom-in" data-aos-delay="1700" data-aos-duration="800"></div>
+                        <div data-aos="zoom-in" data-aos-delay="1700" data-aos-duration="800" style="left: 14.7vw; width: 1.5vw;"></div>
 
                         <p>
-                            I am currently studying for a software engineer<br>
-                            diploma at IJSE and I am also studying other subjects.<br>
-                            I am twenty one years old
+                            “I am currently studying for a software engineer<br>
+                             diploma at IJSE and I am also studying other subjects.<br>
+                             I am twenty one years old
                         </p>
 
                     </div>
@@ -75,20 +79,26 @@
 
                 <ul>
 
+
+
+
+
+
+
                     <a href="https://www.linkedin.com/feed/" target="blank">
-                        <img width="32"  src="assets/FontAwesome_f0e1(1)_48.png" alt="lakshan">
+                        <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="linkedIn" src="assets/FontAwesome_f0e1(1)_48.png">
                     </a>
 
                     <a href="https://www.linkedin.com/feed/" target="blank">
-                        <img width="32"  src="assets/Entypo_f32d(2)_48.png" alt="lakshan">
+                        <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="instergram" src="assets/Entypo_f32d(2)_48.png">
                     </a>
 
                     <a href="https://www.facebook.com/" target="blank">
-                        <img width="32"  src="assets/themify_e741(0)_48.png" alt="lakshan">
+                        <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="facebook" src="assets/themify_e741(0)_48.png">
                     </a>
 
                     <a href="https://www.linkedin.com/feed/" target="blank">
-                        <img width="32"  src="assets/icons8-discord-48 1.png" alt="lakshan">
+                        <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="discord" src="assets/icons8-discord-48 1.png">
                     </a>
 
                 </ul>
