--- a/index.html
+++ b/index.html
@@ -72,18 +72,12 @@
                     <strong>good vibes only !</strong><br><br><br><br>
 
                     <div>
-                        <a href="#aboutMe"><button>About Me</button></a><br><br>
+                        <h6 data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800"><a href="#aboutMe" style="color: white; text-decoration: none">About Me</a></h6>
                     </div>
 
                 </aside>
 
                 <ul>
-
-
-
-
-
-
 
                     <a href="https://www.linkedin.com/feed/" target="blank">
                         <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="linkedIn" src="assets/FontAwesome_f0e1(1)_48.png">
