--- a/index.html
+++ b/index.html
@@ -97,6 +97,24 @@
 
                 </ul>
             </div>
+
+            <div>
+                <img src="assets/triangle.png" alt="taiangle">
+            </div>
+
+            <div>
+                <img src="assets/rawma.png" alt="taiangle">
+            </div>
+
+            <div>
+                <img src="assets/triangle (2).png" alt="taiangle">
+            </div>
+
+            <div>
+                <img src="assets/plus.png" alt="taiangle">
+            </div>
+
+
         </section>
 
 <!--        features section-->
