--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
 
                 <ul>
 
-                    <a href="https://www.linkedin.com/feed/" target="blank">
+                    <a href="https://www.linkedin.com/in/lakshan-rashmika-4a7566249/" target="blank">
                         <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="linkedIn" src="assets/FontAwesome_f0e1(1)_48.png">
                     </a>
 
-                    <a href="https://www.linkedin.com/feed/" target="blank">
+                    <a href="https://www.instagram.com/lak_rashmika/" target="blank">
                         <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="instergram" src="assets/Entypo_f32d(2)_48.png">
                     </a>
 
-                    <a href="https://www.facebook.com/" target="blank">
+                    <a href="https://www.facebook.com/lakshan.rashmika.925" target="blank">
                         <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="facebook" src="assets/themify_e741(0)_48.png">
                     </a>
 
-                    <a href="https://www.linkedin.com/feed/" target="blank">
+                    <a href="https://discord.com/register" target="blank">
                         <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="discord" src="assets/icons8-discord-48 1.png">
                     </a>
 
