--- a/index.html
+++ b/index.html
@@ -119,48 +119,37 @@
 
 <!--        features section-->
         <section id="features">
-                <p>
 
-                <h2>Features</h2>
+            <div data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000">
+                <img src="assets/icons8-ideas-64 (1).png">
+                <h1>Awesome Ideas</h1>
+                <h2>Present awesome ideas while engaging projects</h2>
+            </div>
 
-                <p>
-                    Ultimate Work Flow <br>
-                    Make More Time For The Word That Matters Most
-                </p>
-                <img width="64"  src="assets/icons8-ideas-64 (1).png" alt="lakshan">
-                <h5>Awesome Ideas</h5>
-                <p>
-                    Present awesome <br>
-                    ideas while engaging <br>
-                    projects
-                </p>
-                <img width="64"  src="assets/icons8-quality-94.png" alt="lakshan">
-                <h5>High Quality</h5>
-                <p>
-                    Maintaining the quality <br>
-                    and the neat of <br>
-                    the project
-                </p>
+            <div data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
+                <img src="assets/icons8-quality-94.png">
+                <h1>High Quality</h1>
+                <h2>Maintaining the quality and the neat of the project</h2>
+            </div>
 
-                <img width="64"  src="assets/icons8-time-machine-80.png" alt="lakshan">
-                <h5>Working on Time</h5>
-                <p>
-                    Finalise projects <br>
-                    on time and high <br>
-                    accuracy
-                </p>
-                <img width="64"  src="assets/icons8-communication-64.png" alt="lakshan">
-                <h5>Quality <br>
-                    Communication</h5>
-                <p>
-                    Friendly and Quality <br>
-                    Communication among <br>
-                    Teammates
-                </p>
+            <div data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
+                <img src="assets/icons8-communication-64.png">
+                <h1>Quality Communication</h1>
+                <h2>Friendly and Quality Communication among Teammates</h2>
+            </div>
 
-                </p>
+            <div data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
+                <img src="assets/icons8-time-machine-80.png">
+                <h1>Working on Time</h1>
+                <h2>Finalise projects on time and high accuracy</h2>
+            </div>
 
-            <article></article>
+            <div data-aos="fade-up" data-aos-delay="800" data-aos-duration="1000">
+                <h5>Features</h5>
+                <h1>Ultimate Work Flow</h1>
+                <h2>Make More Time For The Word That Matters Most</h2>
+            </div>
+
         </section>
 
 <!--        about me section-->
