--- a/index.html
+++ b/index.html
@@ -120,38 +120,47 @@
 <!--        features section-->
         <section id="features">
 
-            <div data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000" id="box1">
-                <img src="assets/icons8-ideas-64 (1).png">
-                <h1>Awesome Ideas</h1>
-                <h2>Present awesome ideas while engaging projects</h2>
+            <div>
+                <div data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000" id="box1">
+                    <img src="assets/icons8-ideas-64 (1).png">
+                    <h1>Awesome Ideas</h1>
+                    <h2>Present awesome ideas while engaging projects</h2>
+                </div>
+
+                <div data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" id="box2">
+                    <img src="assets/icons8-quality-94.png">
+                    <h1>High Quality</h1>
+                    <h2>Maintaining the quality and the neat of the project</h2>
+                </div>
+
+                <div data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000" id="box3">
+                    <img src="assets/icons8-communication-64.png">
+                    <h1>Quality Communication</h1>
+                    <h2>Friendly and Quality Communication among Teammates</h2>
+                </div>
+
+                <div data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" id="box4">
+                    <img src="assets/icons8-time-machine-80.png">
+                    <h1>Working on Time</h1>
+                    <h2>Finalise projects on time and high accuracy</h2>
+                </div>
             </div>
 
-            <div data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" id="box2">
-                <img src="assets/icons8-quality-94.png">
-                <h1>High Quality</h1>
-                <h2>Maintaining the quality and the neat of the project</h2>
+            <div>
+                <h5 data-aos="fade-right" data-aos-delay="50" data-aos-duration="1000">Features</h5>
+                <h1 data-aos="fade-left" data-aos-delay="50" data-aos-duration="1000">Ultimate Work Flow</h1>
+                <h2 data-aos="fade-left" data-aos-delay="50" data-aos-duration="1000">Make More Time For The Word That Matters Most</h2>
             </div>
 
-            <div data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000" id="box3">
-                <img src="assets/icons8-communication-64.png">
-                <h1>Quality Communication</h1>
-                <h2>Friendly and Quality Communication among Teammates</h2>
+            <div>
+                <div>
+                    <img src="assets/dot ball(1).png" alt="myImage">
+                </div>
+
+                <div>
+                    <img src="assets/dot ball.png" alt="myImage">
+                </div>
             </div>
-
-            <div data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" id="box4">
-                <img src="assets/icons8-time-machine-80.png">
-                <h1>Working on Time</h1>
-                <h2>Finalise projects on time and high accuracy</h2>
-            </div>
-
-            <h5 data-aos="fade-right" data-aos-delay="50" data-aos-duration="1000">Features</h5>
-            <h1 data-aos="fade-left" data-aos-delay="50" data-aos-duration="1000">Ultimate Work Flow</h1>
-            <h2 data-aos="fade-left" data-aos-delay="50" data-aos-duration="1000">Make More Time For The Word That Matters Most</h2>
-
-
-
-
-
 
 
 
