--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
 
             <div>
                 <div>
-                    <img src="assets/dot ball(1).png" alt="myImage">
+                    <img src="assets/dot ball(1).png" height="110" width="100" alt="myImage">
                 </div>
 
                 <div>
-                    <img src="assets/dot ball.png" alt="myImage">
+                    <img src="assets/dot ball.png" height="200" width="95" alt="myImage">
                 </div>
             </div>
 
