--- a/index.html
+++ b/index.html
@@ -167,26 +167,26 @@
         </section>
 
 <!--        about me section-->
+
         <section id="aboutMe">
-            <aside></aside>
-            <section>
-                <hgroup>
-                    <img width="400"  src="assets/IMG-20230128-WA0033.jpg" alt="lakshan">
-                    <h1>About Me<bfn id = "About Me"></bfn></h1>
-                </hgroup>
-                <p>
-                <h2>
-                    I  Can Develop
-                    That Help People
-                </h2>
 
-                Hello I am Lakshan Rashmika I began my Software engineer<br>
-                life in 2021. I've spent most of my waking hours for the last<br>
-                years designing, programming and operating web sites. I have acquired<br>
-                the skills and knowledge necessary to make your project a success.<br>
-                I enjoy every step of the design process, from discussion and<br>
-                collaboration.
+            <img width="400"  src="assets/myImage.png" alt="lakshan">
 
+            <div data-aos="fade-up" data-aos-delay="100" data-aos-duration="1500">
+
+                <h5>About Me</h5>
+
+                <h1>I Can Develop That Help People</h1>
+
+                <h3> Hello I am Lakshan Rashmika I began my Software engineer life in 2021. I've spent most of my waking hours for the last
+                    years designing, programming and operating web sites. I have acquired the skills and knowledge necessary to make your project a success.
+                    I enjoy every step of the design process, from discussion and collaboration.</h3>
+
+                <img src="assests/images/section4/Section4-Details.png">
+
+            </div>
+
+            <div>
                 <ul>
                     <li>Name : Lakshan Rashmika</li>
                     <li>Address : Matara,Sri Lanka</li>
@@ -195,9 +195,8 @@
                     <li>Contact : +94 71 3988 628 </li>
                     <li>Linked in : Lakshan Rashmika </li>
                 </ul>
-                </p>
+            </div>
 
-            </section>
         </section>
 
 <!--        education section-->
