--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
         <section id="aboutMe">
 
-            <img width="400"  src="assets/myImage.png" alt="lakshan">
+            <img width="400" id="section3MyImage" src="assets/myImage.png" alt="lakshan">
 
             <div data-aos="fade-up" data-aos-delay="100" data-aos-duration="1500">
 
