--- a/index.html
+++ b/index.html
@@ -199,43 +199,49 @@
 
 <!--        education section-->
         <section id="education">
-            <section>
-                <hgroup>
-                    <img width="1341" height="1900" src="assets/Frame 45.png" alt="lakshan">
+            <img width="1349.4" height="400"  id="section4colorboard" src="assets/Frame 16.png" alt="lakshan">
+            <div>
+                <div>
                     <h1>Education<bfn id = "Education"></bfn></h1>
                     <h2>My Resume</h2>
+                </div>
 
+                <div>
                     <h5>2007-2018</h5>
                     <img width="50"  src="assets/icons8-pass-fail-96.png" alt="lakshan">
-                    <p>
+                    <h1>
                         G.C.E Ordinary Level Examination <br>
                         St. Thomas' College, Matara
-                    </p>
+                    </h1>
+                </div>
 
+                <div>
                     <img width="50"  src="assets/icons8-examination-64.png" alt="lakshan">
                     <h5>2018-2021</h5>
-                    <p>
+                    <h1>
                         G.C.E Advanced Level Examination <br>
                         St. Thomas' College, Matara
-                    </p>
+                    </h1>
+                </div>
 
+                <div>
                     <h5>2021-2024</h5>
                     <img width="50"  src="assets/icons8-diploma-94.png" alt="lakshan">
-                    <p>
+                    <h1>
                         Graduate Diploma in Software Engineering <br>
                         Institute of Java Software Engineering
-                    </p>
+                    </h1>
+                </div>
 
+                <div>
                     <img width="50"  src="assets/icons8-degree-94.png" alt="lakshan">
                     <h5>2024-2025</h5>
-                    <p>
+                    <h1>
                         Software Engineering Degree <br>
                         Institute of Java Software Engineering
-                    </p>
-
-
-                </hgroup>
-                <section></section>
+                    </h1>
+                </div>
+            </div>
             </section>
 
             <section>
