--- a/index.html
+++ b/index.html
@@ -199,10 +199,13 @@
 
 <!--        education section-->
         <section id="education">
-            <img width="1349.4" height="1900"  id="section4colorboard" src="assets/Frame 46.png" alt="lakshan">
+            <div>
+                <img width="1349.4" height="1900"  id="section4colorboard" src="assets/Frame 46.png" alt="lakshan">
+            </div>
+
             <div>
                 <div>
-                    <h1>Education<bfn id = "Education"></bfn></h1>
+                    <h1>Education</h1>
                     <h2>My Resume</h2>
                 </div>
 
