--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
                 <div>
                     <h5>2007-2018</h5>
                     <img width="50"  src="assets/icons8-pass-fail-96.png" alt="lakshan">
-                    <h1>
-                        G.C.E Ordinary Level Examination <br>
-                        St. Thomas' College, Matara
-                    </h1>
+
+                    <h1>  G.C.E Ordinary Level Examination</h1>
+                     <h2>St. Thomas' College, Matara</h2>
+
                 </div>
 
                 <div>
