--- a/index.html
+++ b/index.html
@@ -211,6 +211,10 @@
 
                 <div>
                     <hr>
+                    <div>
+                        <img src="assets/ball.png" />
+                        <img src="assets/Line 18.png"/>
+                    </div>
 
                     <h5>2007-2018</h5>
                     <img width="50"  src="assets/icons8-pass-fail-96.png" alt="lakshan">
