--- a/index.html
+++ b/index.html
@@ -225,6 +225,11 @@
                 </div>
 
                 <div>
+                    <hr>
+                    <div>
+                        <img src="assets/Line 19.png" />
+                    </div>
+
                     <img width="50"  src="assets/icons8-examination-64.png" alt="lakshan">
                     <h5>2018-2021</h5>
                     <h1>
