--- a/index.html
+++ b/index.html
@@ -232,10 +232,10 @@
 
                     <img width="50"  src="assets/icons8-examination-64.png" alt="lakshan">
                     <h5>2018-2021</h5>
-                    <h1>
-                        G.C.E Advanced Level Examination <br>
-                        St. Thomas' College, Matara
-                    </h1>
+
+                    <h1>G.C.E Advanced Level Examination</h1>
+                    <h2> St. Thomas' College, Matara</h2>
+
                 </div>
 
                 <div>
