--- a/index.html
+++ b/index.html
@@ -239,12 +239,18 @@
                 </div>
 
                 <div>
+
+                    <hr>
+                    <div>
+                        <img src="assets/Line 18.png" />
+                    </div>
+
                     <h5>2021-2024</h5>
                     <img width="50"  src="assets/icons8-diploma-94.png" alt="lakshan">
-                    <h1>
-                        Graduate Diploma in Software Engineering <br>
-                        Institute of Java Software Engineering
-                    </h1>
+
+                    <h1>Graduate Diploma in Software Engineering</h1>
+                    <h2>  Institute of Java Software Engineering</h2>
+
                 </div>
 
                 <div>
