--- a/index.html
+++ b/index.html
@@ -254,12 +254,17 @@
                 </div>
 
                 <div>
+                    <hr>
+                    <div>
+                        <img src="assets/Line 19.png" />
+                    </div>
+
                     <img width="50"  src="assets/icons8-degree-94.png" alt="lakshan">
                     <h5>2024-2025</h5>
-                    <h1>
-                        Software Engineering Degree <br>
-                        Institute of Java Software Engineering
-                    </h1>
+
+                    <h1>Software Engineering Degree</h1>
+                    <h2>Institute of Java Software Engineering</h2>
+
                 </div>
             </div>
             </section>
