--- a/index.html
+++ b/index.html
@@ -266,6 +266,14 @@
                     <h2>Institute of Java Software Engineering</h2>
 
                 </div>
+
+                <div>
+                    <hr>
+                    <div>
+                        <img src="assets/ball.png" />
+                    </div>
+                </div>
+
             </div>
             </section>
 
