--- a/index.html
+++ b/index.html
@@ -277,21 +277,30 @@
             </div>
             </section>
 
-            <section>
-                <hgroup>
-                    <h1>Languages</h1>
-                    <img width="95"  src="assets/Frame 5.png" alt="lakshan">
-                    <img width="95"  src="assets/Frame 5 (1).png" alt="lakshan">
-                    <img width="95"  src="assets/Frame 5 (2).png" alt="lakshan">
-                    <img width="90"  src="assets/icons8-arduino-144 (1).png" alt="lakshan">
-                    <img width="90"  src="assets/icons8-css-144 (1).png" alt="lakshan">
-                    <img width="90"  src="assets/icons8-figma-144 (1).png" alt="lakshan">
-                    <img width="90"  src="assets/icons8-html-144 (1).png" alt="lakshan">
-                    <img width="95"  src="assets/icons8-javascript-144 (1).png" alt="lakshan">
-                    <img width="90"  src="assets/icons8-wordpress-144 (1).png" alt="lakshan">
-                </hgroup>
-            </section>
-            <section></section>
+        <section>
+
+            <h5>Languages</h5>
+            <h1>What I Learnt</h1>
+
+            <img id="javaLogo" src="Frame 5 (1).png">
+
+            <img id="sqlLogo" src="assets/Frame 5 (2).png">
+
+            <img id="jsLogo" src="assets/icons8-javascript-144 (1).png">
+
+            <img id="cssLogo" src="assets/icons8-css-144 (1).png">
+
+            <img id="htmlLogo" src="assets/icons8-html-144 (1).png">
+
+            <img id="figmaLogo" src="assets/icons8-figma-144 (1).png">
+
+            <img id="wordpressLogo" src="assets/icons8-wordpress-144 (1).png">
+
+            <img id="arduinoLogo" src="assets/icons8-arduino-144 (1).png">
+
+            <img id="hibernateLogo" src="assets/Hibernate.png">
+
+
 
         </section>
 
