--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             <h5>Languages</h5>
             <h1>What I Learnt</h1>
 
-            <img id="javaLogo" src="Frame 5 (1).png">
+            <img id="javaLogo" src="assets/Frame 5 (1).png">
 
             <img id="sqlLogo" src="assets/Frame 5 (2).png">
 
