--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@
 
 <!--        my expertise section-->
         <section id="expertise">
-            <hgroup>
 
+            <div>
                 <h1>My Expertise</h1>
                 <h2> What Can I Do For Your Needs</h2>
 
@@ -318,6 +318,7 @@
                     languages
 
                 </p>
+            </div>
 
                 <div>
                     <img width="128"  src="assets/coding.png" alt="lakshan">
@@ -398,7 +399,6 @@
                 </div>
 
 
-            </hgroup>
 
         </section>
 
