--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <!--        header section-->
         <section id="home">
             <div>
-                <img width="1349" height="780" src="assets/Frame 2.png" alt="lakshan">
+                <img src="assets/Frame 2.png" alt="lakshan">
             </div>
 
             <div>
