--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 <!--        education section-->
         <section id="education">
             <div>
-                <img width="1349.4" height="900"  id="section4colorboard" src="assets/Frame 56.png" alt="lakshan">
+                <img id="section4colorboard" src="assets/Frame 56.png" alt="lakshan">
             </div>
 
             <div>
