--- a/index.html
+++ b/index.html
@@ -311,26 +311,15 @@
                 <h1>My Expertise</h1>
                 <h2> What Can I Do For Your Needs</h2>
 
-                <p>
-                    Some understanding of software application concept, design,<br>
-                    evaluation and maintenance. To create software solutions for end users,<br>
-                    software engineers have little understanding of their programming<br>
-                    languages
-
-                </p>
+                <h3> Some understanding of software application concept, design,  evaluation and maintenance. To create software solutions for end users,
+                    software engineers have little understanding of their programming  languages</h3>
             </div>
 
                 <div>
                     <img width="128"  src="assets/coding.png" alt="lakshan">
                     <h5> web design</h5>
-                    <p>
-                        Develop any kind of <br>
-                        web application either<br>
-                        to conduct your business<br>
-                        activities or to promote<br>
-                        your business.
+                    <h2>Develop any kind of  web application either to conduct your business  activities or to promote your business.</h2>
 
-                    </p>
                 </div>
 
                 <div>
