--- a/index.html
+++ b/index.html
@@ -315,14 +315,41 @@
                     software engineers have little understanding of their programming  languages</h3>
             </div>
 
-                <div>
-                    <img width="128"  src="assets/coding.png" alt="lakshan">
-                    <h5> web design</h5>
-                    <h2>Develop any kind of  web application either to conduct your business  activities or to promote your business.</h2>
+            <div class="col-md-4">
+                <div class="content-inner fl-wrap">
 
+
+                    <div class="content-front">
+
+                        <div class="cf-inner">
+                            <!--                <div class="bg "  data-bg="images/services/1.jpg"></div>-->
+                            <div class="overlay"></div>
+
+                            <div class="inner">
+                                <h2>web design</h2>
+                                <!--                           <h4>Start eating better</h4>-->
+                            </div>
+                            <div class="serv-num">01.</div>
+                        </div>
+
+                    </div>
+
+
+                    <div class="content-back">
+                        <div class="cf-inner">
+                            <div class="inner">
+                                <div class="dec-icon">
+                                    <img src="assets/design.png" alt="">
+                                </div>
+                                <p> Develop any kind of web application either to conduct your business activities or to promote your business.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+            </div>
 
-                <div>
+
+            <div>
                     <img width="128"  src="assets/application.png" alt="lakshan">
                     <h5> Enterprise Application</h5>
                     <p>
