--- a/index.html
+++ b/index.html
@@ -349,17 +349,40 @@
             </div>
 
 
-            <div>
-                    <img width="128"  src="assets/application.png" alt="lakshan">
-                    <h5> Enterprise Application</h5>
-                    <p>
-                        Create Modern Enterprise <br>
-                        Application that reliable <br>
-                        and consistency with <br>
-                        awesome ideas.
+            <div class="col-md-2">
+                <div class="content-inner fl-wrap">
 
-                    </p>
+
+                    <div class="content-front">
+
+                        <div class="cf-inner">
+                            <!--                <div class="bg "  data-bg="images/services/1.jpg"></div>-->
+                            <div class="overlay"></div>
+
+                            <div class="inner">
+                                <h2>Enterprise Application</h2>
+                                <!--                           <h4>Start eating better</h4>-->
+                            </div>
+                            <div class="serv-num">01.</div>
+                        </div>
+
+                    </div>
+
+
+                    <div class="content-back">
+                        <div class="cf-inner">
+                            <div class="inner">
+                                <div class="dec-icon">
+                                    <img src="assets/design.png" alt="">
+                                </div>
+                                <p> Create Modern Enterprise Application that reliable and consistency with awesome ideas.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+            </div>
+
+
 
                 <div>
                     <img width="128"  src="assets/design.png" alt="lakshan">
