--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                         <div class="cf-inner">
                             <div class="inner">
                                 <div class="dec-icon">
-                                    <img src="assets/design.png" alt="">
+                                    <img src="assets/application.png" alt="">
                                 </div>
                                 <p> Create Modern Enterprise Application that reliable and consistency with awesome ideas.</p>
                             </div>
