--- a/index.html
+++ b/index.html
@@ -383,20 +383,42 @@
             </div>
 
 
+            <div class="col-md-3">
+                <div class="content-inner fl-wrap">
 
-                <div>
-                    <img width="128"  src="assets/design.png" alt="lakshan">
-                    <h5> UI / UX Designing</h5>
-                    <p>
-                        Design is the main <br>
-                        thing of a application. <br>
-                        Pay more attention to <br>
-                        the UI / UX part of the <br>
-                        Software with eyecatching <br>
-                        colors.
 
-                    </p>
+                    <div class="content-front">
+
+                        <div class="cf-inner">
+                            <!--                <div class="bg "  data-bg="images/services/1.jpg"></div>-->
+                            <div class="overlay"></div>
+
+                            <div class="inner">
+                                <h2>UI / UX Designing</h2>
+                                <!--                           <h4>Start eating better</h4>-->
+                            </div>
+                            <div class="serv-num">01.</div>
+                        </div>
+
+                    </div>
+
+
+                    <div class="content-back">
+                        <div class="cf-inner">
+                            <div class="inner">
+                                <div class="dec-icon">
+                                    <img src="assets/design.png" alt="">
+                                </div>
+                                <p>Design is the main thing of a application. Pay more attention to the UI / UX part of the Software with eyecatching  colors.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+            </div>
+
+
+
+
 
                 <div>
                     <img width="128"  src="assets/cloud-data.png" alt="lakshan">
