--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                                 <h2>Enterprise Application</h2>
                                 <!--                           <h4>Start eating better</h4>-->
                             </div>
-                            <div class="serv-num">01.</div>
+                            <div class="serv-num">02.</div>
                         </div>
 
                     </div>
@@ -397,7 +397,7 @@
                                 <h2>UI / UX Designing</h2>
                                 <!--                           <h4>Start eating better</h4>-->
                             </div>
-                            <div class="serv-num">01.</div>
+                            <div class="serv-num">03.</div>
                         </div>
 
                     </div>
@@ -417,19 +417,74 @@
             </div>
 
 
+            <div class="col-md-4">
+                <div class="content-inner fl-wrap">
 
 
+                    <div class="content-front">
 
-                <div>
-                    <img width="128"  src="assets/cloud-data.png" alt="lakshan">
-                    <h5> IOT Based Application</h5>
-                    <p>
-                        Discover the Next <br>
-                        Generation of the <br>
-                        human world.
+                        <div class="cf-inner">
+                            <!--                <div class="bg "  data-bg="images/services/1.jpg"></div>-->
+                            <div class="overlay"></div>
 
-                    </p>
+                            <div class="inner">
+                                <h2>IOT Application</h2>
+                                <!--                           <h4>Start eating better</h4>-->
+                            </div>
+                            <div class="serv-num">04.</div>
+                        </div>
+
+                    </div>
+
+
+                    <div class="content-back">
+                        <div class="cf-inner">
+                            <div class="inner">
+                                <div class="dec-icon">
+                                    <img src="assets/cloud-data.png" alt="">
+                                </div>
+                                <p> Discover the Next Generation of the human world.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+            </div>
+
+
+            <div class="col-md-5">
+                <div class="content-inner fl-wrap">
+
+
+                    <div class="content-front">
+
+                        <div class="cf-inner">
+                            <!--                <div class="bg "  data-bg="images/services/1.jpg"></div>-->
+                            <div class="overlay"></div>
+
+                            <div class="inner">
+                                <h2>Graphic Designing</h2>
+                                <!--                           <h4>Start eating better</h4>-->
+                            </div>
+                            <div class="serv-num">05.</div>
+                        </div>
+
+                    </div>
+
+
+                    <div class="content-back">
+                        <div class="cf-inner">
+                            <div class="inner">
+                                <div class="dec-icon">
+                                    <img src="assets/web-design.png" alt="">
+                                </div>
+                                <p> The best designer can change everything in the artwork. I think graphic designers are like a magician in this field. </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
 
                 <div>
                     <img width="128"  src="assets/web-design.png" alt="lakshan">
